fix :: image file 경로 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@image/*": ["./public/*"]
     },
     "forceConsistentCasingInFileNames": true
   },
